[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/objects/GameEnemy.gd" type="Script" id=1]
[ext_resource path="res://src/objects/GameHitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/objects/GameHurtbox.tscn" type="PackedScene" id=3]

[node name="GameEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 152
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Data" type="Node2D" parent="."]

[node name="GameHitbox" parent="Data" instance=ExtResource( 2 )]
collision_mask = 32

[node name="GameHurtbox" parent="Data" instance=ExtResource( 3 )]
collision_layer = 64

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Data/GameHurtbox" to="." method="_on_GameHurtbox_area_entered"]

[editable path="Data/GameHitbox"]
